--- a/src/templates/add_security_form.html
+++ b/src/templates/add_security_form.html
@@ -32,7 +32,8 @@
                             <input type="text" placeholder="Должность" name="position">
                         </label>
                         <button type="submit" class="add_button"> + Добавить</button>
-                        <button onclick="location.href='{{base_url}}'" type="button" class=back_button>
+                        <button onclick="location.href='{{base_url}}/admins/securities'" type="button"
+                        class=back_button>
                             Назад
                         </button>
                     </div>
