--- a/src/templates/contractor.html
+++ b/src/templates/contractor.html
@@ -30,7 +30,7 @@
     <div class="doc_info_wr">
         <p><a href="{{contractor.ogrn_link}}">ОГРН</a></p>
         <p><a href="{{contractor.inn_link}}">ИНН</a></p>
-        <p>Договоры:</p>
+        <h3>Договоры:</h3>
     </div>
 
     <form class="search" method="get" action="{{base_url}}/contractors/{{contractor.id}}">
