--- a/src/templates/representative_request_main.html
+++ b/src/templates/representative_request_main.html
@@ -14,7 +14,7 @@
 
     <div class="agent_contract_wr">
         <p><b>Объект: </b>{{request_.name_of_object}}</p>
-        <p><b>Договор: </b> <a href="#">{{request_.contract_title}}</a></p>
+        <p><b>Договор: </b> <a href="{{request_.contract_link}}">{{request_.contract_title}}</a></p>
     </div>
 
     <form class="search" method="get">
