--- a/src/templates/operator-representative-add-form.html
+++ b/src/templates/operator-representative-add-form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="{{url_for('static', path='/add_form.css')}}" rel="stylesheet" type="text/css">
+    <link href="{{url_for('static', path='/contractor_add_form.css')}}" rel="stylesheet" type="text/css">
     <title>Добавление контактного лица</title>
     {% block javascript %}
     <script src="{{ url_for('static',path='/copy_url_to_clipboard.js') }}"></script>
