fixed some small things

--- a/src/templates/contract_form.html
+++ b/src/templates/contract_form.html
@@ -22,7 +22,7 @@
                         <p>Договор:
                             <label class="custom_upload">
                                 Загрузить файл
-                                <input id="file" type="file" name="file">
+                                <input id="file" type="file" name="file" accept="application/pdf,application/vnd.ms-excel">
                             </label>
                         </p>
                         <button type="submit" class="add_button"> + Добавить</button>
