--- a/src/templates/representatives_request_view.html
+++ b/src/templates/representatives_request_view.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="exit_wr">
-        <button class="exit_button">Выйти</button>
+        <button onclick="window.location.replace('{{base_url}}/logout')" class="exit_button">Выйти</button>
     </div>
 
 </div>
