--- a/src/templates/representative_request_main.html
+++ b/src/templates/representative_request_main.html
@@ -99,7 +99,7 @@
     </script>
 
     <div class="exit_wr">
-        <button class="exit_button">Выйти</button>
+        <button onclick="window.location.replace('{{base_url}}/logout')" class="exit_button">Выйти</button>
     </div>
 
 </div>
