--- a/src/templates/violation_add_form.html
+++ b/src/templates/violation_add_form.html
@@ -36,7 +36,8 @@
                             </select>
                         </label>
                         <button type="submit" class="add_button"> + Добавить</button>
-                        <button type="button" class="back_button"> Назад</button>
+                        <button onclick="window.location.replace('{{base_url}}/securities/workers/')" type="button"
+                        class="back_button"> Назад</button>
                     </div>
                 </div>
             </div>
