--- a/src/templates/add_catalog_with_int_value.html
+++ b/src/templates/add_catalog_with_int_value.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="{{url_for('static', path='/add_form.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', path='/admin_add_form.css')}}" rel="stylesheet">
     <title>Справочник</title>
     {% block javascript %}
     <script src="{{ url_for('static',path='/add_catalog_element.js') }}"></script>
