--- a/src/templates/worker_add_form.html
+++ b/src/templates/worker_add_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="{{url_for('static', path='/add_form.css')}}" rel="stylesheet" type="text/css">
+    <link href="{{url_for('static', path='/worker_add_form.css')}}" rel="stylesheet" type="text/css">
     <title>Добавление Рабочего</title>
 </head>
 
